<resources>
    <string name="app_name">FirstK</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or_login_with">Or Login with</string>
    <string name="frag_1">Frag 1</string>
    <string name="frag_2">Frag 2</string>
    <string name="frag_3">Frag 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment3">Hello blank fragment 3</string>
    <string name="example">Example</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="id">ID</string>
    <string name="sign_out">Sign Out</string>
</resources>